fix spacing so vertical and horizontal spacing is equal between the buttons and borders

--- a/components/Client/ClientCard/ClientCard.module.css
+++ b/components/Client/ClientCard/ClientCard.module.css
@@ -1,6 +1,6 @@
 .card {
     margin: 1rem;
-    padding: 1rem;
+    padding: 1.1rem;
     text-align: left;
     color: inherit;
     text-decoration: none;
@@ -43,10 +43,8 @@
     margin-top: 1rem;
     display: flex;
     flex-direction: row;
-}
-
-.button {
-    margin: 10px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .skeleton {
@@ -103,7 +101,8 @@
     position: absolute;
     margin: 0;
     top: 10px;
-    right: 10px;
+    right: 15px;
+    font-size: 0.8rem;
     display: flex;
     gap: 1rem;
 }
